styled password box and fixed some spacing

--- a/app/assets/stylesheets/components/containers.css
+++ b/app/assets/stylesheets/components/containers.css
@@ -23,11 +23,11 @@ body {
 }
 
 .wide-box {
-  width: 1500px;
+  width: 1200px;
 }
 
 .narrow-box {
-  width: 750px;
+  width: 600px;
 }
 
 .center {
