--- a/app/assets/stylesheets/components/event_cards.css
+++ b/app/assets/stylesheets/components/event_cards.css
@@ -9,11 +9,13 @@
 }
 
 .event_card {
-  flex: 1;
-  width: 40%;
+  flex: 1 0 40%;
+  max-width: 45%;
   background-color: white;
   border: 2px solid #ff7c93;
-  margin: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 2rem;
   display: flex;
   flex-direction: row;
 }
@@ -80,9 +82,14 @@
   text-decoration: none;
   border-bottom: none;
   text-align: left;
-  line-height: 0;
   margin-bottom: 0.5em;
+  line-height: 0.85em;
   margin-top: 0;
+  font-size: 2em;
+}
+
+.event_password_input {
+  border: 1px solid black;
 }
 
 /*
